# skiros_simple_uav

./: README.md
simple_uav_conditions/: CMakeLists.txt  package.xml  plugin.xml
simple_uav_conditions/src/: condition_types.cpp
simple_uav_primitives/: CMakeLists.txt  package.xml  plugin.xml
simple_uav_primitives/src/: monitor_battery.cpp
simple_uav_skills/: CMakeLists.txt  package.xml  plugin.xml
simple_uav_skills/src/: drive.cpp  flyToAltitude.cpp  land.cpp  pick.cpp  place.cpp
skiros_simple_uav/: CMakeLists.txt  package.xml
skiros_simple_uav/launch/: skiros_simple_uav.launch
skiros_simple_uav/owl/: uav.owl
skiros_simple_uav/scenes/: simple_uav_scene.xml
